# maelstromhub

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_create_workflow_tables.py  0002_create_research_tables.py  0003_add_dataset_candles.py  0004_add_ingestion_jobs.py  0005_add_feature_snapshots.py  0006_add_strategy_sdk.py  0007_add_backtests.py  0008_add_paper_trading.py  0009_add_market_intelligence.py  0010_repair_uuid_columns.py  0011_add_workspace_notes.py
apps/api/app/: config.py  main.py  workspace.py
apps/api/app/db/: backtest_repositories.py  models.py  paper_repositories.py  repositories.py  research_repositories.py  session.py  strategy_repositories.py
apps/api/app/features/: calculators.py
apps/api/app/market_intelligence/: __init__.py  classifier.py  engine.py  repository.py  service.py
apps/api/app/providers/: candles.py
apps/api/app/routes/: research.py  workflow.py  workspace.py
apps/api/scripts/: seed.py
apps/api/tests/: test_feature_calculators.py  test_routes.py
apps/web/: Dockerfile  eslint.config.mjs  package.json  (+2 more)
apps/worker/: Dockerfile  pyproject.toml
apps/worker/worker/: config.py  main.py
backend/: Dockerfile  README.md  go.mod
deploy/: env.example
docs/: architecture.md  coding-standards.md  hyperliquid.md  product-spec-v2.md  product-vision.md  roadmap.md
frontend/: Dockerfile  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
(+60 files in other folders)
