[project]
name = "maelstromhub-api"
version = "0.1.0"
description = "FastAPI service for Maelstromhub."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111,<0.116",
  "maelstromhub-core",
  "psycopg[binary]>=3.2,<4.0",
  "pydantic-settings>=2.4,<3.0",
  "redis>=5.0,<6.0",
  "starlette>=0.37,<0.47",
  "uvicorn[standard]>=0.30,<1.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "ruff>=0.5,<1.0",
  "pytest>=8.3,<9.0"
]

[tool.uv.sources]
maelstromhub-core = { path = "../../packages/core", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
