[project]
name = "maelstromhub-worker"
version = "0.1.0"
description = "Background worker for Maelstromhub."
requires-python = ">=3.12"
dependencies = [
  "maelstromhub-core",
  "pydantic-settings>=2.4,<3.0",
  "redis>=5.0,<6.0"
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5,<1.0",
  "pytest>=8.3,<9.0"
]

[tool.uv.sources]
maelstromhub-core = { path = "../../packages/core", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["worker"]
